# generic-webhook-comfy

./: README.md  nodes.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-comfyui-registry.yml
examples/: generic-webhook-usage.md  nextjs-webhook-handler.md
modules/: webhook_sender.py
workflows/: generic-webhook-example.json  webhook-example.json
